Adicionafo mais linhas no ex 10_3

--- a/Cap10/estilos.css
+++ b/Cap10/estilos.css
@@ -5,5 +5,5 @@ img.moeda1-00 { height: 84px; width: 84px; margin-bottom: 5px; }
 img.moeda0-50 { height: 66px; width: 66px; margin-bottom: 5px; }
 img.moeda0-25 { height: 76px; width: 76px; margin-bottom: 5px; }
 img.moeda0-10 { height: 60px; width: 60px; margin-bottom: 5px; }
-.exclui { color: red; cursor: pointer; }
+.exclui { color: red; cursor: pointer; } /*Faz o mouse virar um dedinho */
 .alinha-direita { text-align: right; }
