--- a/Cap10/estilos.css
+++ b/Cap10/estilos.css
@@ -14,5 +14,5 @@ img.moeda0-10 { height: 60px; width: 60px; margin-bottom: 5px; }
 img.normal { float: left; height: 320px; width: 320px; }
 
 #teste{
-    
+    background-color: blueviolet;
 }
